QMOLEDEV/i3-4.1/src/cfgparse.output
Terminals unused in grammar

   TOKSET
   "\342\206\222"


Grammar

    0 $accept: lines $end

    1 lines: /* empty */
    2      | lines error
    3      | lines line

    4 line: bindline
    5     | for_window
    6     | mode
    7     | bar
    8     | floating_modifier
    9     | orientation
   10     | workspace_layout
   11     | new_window
   12     | new_float
   13     | focus_follows_mouse
   14     | force_focus_wrapping
   15     | force_xinerama
   16     | workspace_back_and_forth
   17     | workspace_bar
   18     | workspace
   19     | assign
   20     | ipcsocket
   21     | restart_state
   22     | exec
   23     | exec_always
   24     | single_color
   25     | color
   26     | terminal
   27     | font
   28     | comment
   29     | popup_during_fullscreen

   30 comment: "<comment>"

   31 command: "<string>"

   32 bindline: binding

   33 binding: TOKBINDCODE bindcode
   34        | "bindsym" bindsym

   35 bindcode: binding_modifiers "<number>" command

   36 bindsym: binding_modifiers word_or_number command

   37 for_window: "for_window" match command

   38 match: /* empty */
   39      | matchstart criteria matchend

   40 matchstart: '['

   41 matchend: ']'

   42 criteria: criteria criterion
   43         | criterion

   44 criterion: "class" '=' "<string>"
   45          | "instance" '=' "<string>"
   46          | "window_role" '=' "<string>"
   47          | "con_id" '=' "<string>"
   48          | "id" '=' "<string>"
   49          | "mark" '=' "<string>"
   50          | "title" '=' "<string>"

   51 qstring_or_number: "<quoted string>"
   52                  | "<number>"

   53 word_or_number: "<word>"
   54               | "<number>"

   55 mode: "mode" "<quoted string>" '{' modelines '}'

   56 modelines: /* empty */
   57          | modelines modeline

   58 modeline: comment
   59         | binding

   60 bar: "bar" '{' barlines '}'

   61 barlines: /* empty */
   62         | barlines barline

   63 barline: comment
   64        | bar_status_command
   65        | bar_output
   66        | bar_tray_output
   67        | bar_position
   68        | bar_mode
   69        | bar_font
   70        | bar_workspace_buttons
   71        | bar_verbose
   72        | bar_socket_path
   73        | bar_colors
   74        | bar_color_background
   75        | bar_color_statusline
   76        | bar_color_focused_workspace
   77        | bar_color_active_workspace
   78        | bar_color_inactive_workspace
   79        | bar_color_urgent_workspace

   80 bar_status_command: "status_command" "<string>"

   81 bar_output: "output (bar)" "<string>"

   82 bar_tray_output: "tray_output" "<string>"

   83 bar_position: "position" bar_position_position

   84 bar_position_position: "top"
   85                      | "bottom"

   86 bar_mode: "mode (bar)" bar_mode_mode

   87 bar_mode_mode: "hide"
   88              | "dock"

   89 bar_font: "font (bar)" "<string>"

   90 bar_workspace_buttons: "workspace_buttons" bool

   91 bar_verbose: "verbose" bool

   92 bar_socket_path: "socket_path" "<string>"

   93 bar_colors: "colors" '{' barlines '}'

   94 bar_color_background: "background" "#<hex>"

   95 bar_color_statusline: "statusline" "#<hex>"

   96 bar_color_focused_workspace: "focused_workspace" "#<hex>" "#<hex>"

   97 bar_color_active_workspace: "active_workspace" "#<hex>" "#<hex>"

   98 bar_color_inactive_workspace: "inactive_workspace" "#<hex>" "#<hex>"

   99 bar_color_urgent_workspace: "urgent_workspace" "#<hex>" "#<hex>"

  100 floating_modifier: "floating_modifier" binding_modifiers

  101 orientation: "default_orientation" direction

  102 direction: "horizontal"
  103          | "vertical"
  104          | "auto"

  105 workspace_layout: "workspace_layout" layout_mode
  106                 | "workspace_layout" "stack-limit" "stack-limit" "<number>"

  107 layout_mode: "default"
  108            | "stacking"
  109            | "tabbed"

  110 new_window: "new_window" border_style

  111 new_float: "new_float" border_style

  112 border_style: "normal"
  113             | "none"
  114             | "1pixel"

  115 bool: "<number>"
  116     | "<word>"

  117 focus_follows_mouse: "focus_follows_mouse" bool

  118 force_focus_wrapping: "force_focus_wrapping" bool

  119 force_xinerama: "force_xinerama" bool

  120 workspace_back_and_forth: "workspace_auto_back_and_forth" bool

  121 workspace_bar: "workspace_bar" bool

  122 workspace: "workspace" qstring_or_number "output" "<RandR output>" optional_workspace_name
  123          | "workspace" "<number>" workspace_name

  124 optional_workspace_name: /* empty */
  125                        | workspace_name

  126 workspace_name: "<quoted string>"
  127               | "<string>"
  128               | "<word>"

  129 assign: "assign" window_class "<string>"
  130       | "assign" match "<string>"

  131 window_class: "<quoted string>"
  132             | "<string (non-greedy)>"

  133 ipcsocket: "ipc_socket" "<string>"

  134 restart_state: "restart_state" "<string>"

  135 exec: "exec" optional_no_startup_id "<string>"

  136 exec_always: "exec_always" optional_no_startup_id "<string>"

  137 optional_no_startup_id: /* empty */
  138                       | "--no-startup-id"

  139 terminal: TOKTERMINAL "<string>"

  140 font: "font" "<string>"

  141 single_color: TOKSINGLECOLOR colorpixel

  142 color: TOKCOLOR colorpixel colorpixel colorpixel

  143 colorpixel: "#<hex>"

  144 binding_modifiers: /* empty */
  145                  | binding_modifier
  146                  | binding_modifiers '+' binding_modifier
  147                  | binding_modifiers '+'

  148 binding_modifier: "<modifier>"
  149                 | "control"
  150                 | "shift"

  151 popup_during_fullscreen: "popup_during_fullscreen" popup_setting

  152 popup_setting: "ignore"
  153              | "leave_fullscreen"


Terminals, with rules where they appear

$end (0) 0
'+' (43) 146 147
'=' (61) 44 45 46 47 48 49 50
'[' (91) 40
']' (93) 41
'{' (123) 55 60 93
'}' (125) 55 60 93
error (256) 2
"<number>" (258) 35 52 54 106 115 123
"<word>" (259) 53 116 128
"<string>" (260) 31 44 45 46 47 48 49 50 80 81 82 89 92 127 129 130
    133 134 135 136 139 140
"<string (non-greedy)>" (261) 132
"#<hex>" (262) 94 95 96 97 98 99 143
"<RandR output>" (263) 122
TOKBINDCODE (264) 33
TOKTERMINAL (265) 139
"<comment>" (266) 30
"font" (267) 140
"bindsym" (268) 34
"<modifier>" (269) 148
"control" (270) 149
"shift" (271) 150
"floating_modifier" (272) 100
"<quoted string>" (273) 51 55 126 131
"workspace" (274) 122 123
"output" (275) 122
"assign" (276) 129 130
TOKSET (277)
"ipc_socket" (278) 133
"restart_state" (279) 134
"exec" (280) 135
"exec_always" (281) 136
TOKSINGLECOLOR (282) 141
TOKCOLOR (283) 142
"\342\206\222" (284)
"mode" (285) 55
"bar" (286) 60
"default_orientation" (287) 101
"horizontal" (288) 102
"vertical" (289) 103
"auto" (290) 104
"workspace_layout" (291) 105 106
"new_window" (292) 110
"new_float" (293) 111
"normal" (294) 112
"none" (295) 113
"1pixel" (296) 114
"focus_follows_mouse" (297) 117
"force_focus_wrapping" (298) 118
"force_xinerama" (299) 119
"workspace_auto_back_and_forth" (300) 120
"workspace_bar" (301) 121
"default" (302) 107
"stacking" (303) 108
"tabbed" (304) 109
"stack-limit" (305) 106
"popup_during_fullscreen" (306) 151
"ignore" (307) 152
"leave_fullscreen" (308) 153
"for_window" (309) 37
"output (bar)" (310) 81
"tray_output" (311) 82
"socket_path" (312) 92
"mode (bar)" (313) 86
"hide" (314) 87
"dock" (315) 88
"position" (316) 83
"bottom" (317) 85
"top" (318) 84
"status_command" (319) 80
"font (bar)" (320) 89
"workspace_buttons" (321) 90
"verbose" (322) 91
"colors" (323) 93
"background" (324) 94
"statusline" (325) 95
"focused_workspace" (326) 96
"active_workspace" (327) 97
"inactive_workspace" (328) 98
"urgent_workspace" (329) 99
"--no-startup-id" (330) 138
"mark" (331) 49
"class" (332) 44
"instance" (333) 45
"window_role" (334) 46
"id" (335) 48
"con_id" (336) 47
"title" (337) 50


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
lines (90)
    on left: 1 2 3, on right: 0 2 3
line (91)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29, on right: 3
comment (92)
    on left: 30, on right: 28 58 63
command (93)
    on left: 31, on right: 35 36 37
bindline (94)
    on left: 32, on right: 4
binding (95)
    on left: 33 34, on right: 32 59
bindcode (96)
    on left: 35, on right: 33
bindsym (97)
    on left: 36, on right: 34
for_window (98)
    on left: 37, on right: 5
match (99)
    on left: 38 39, on right: 37 130
matchstart (100)
    on left: 40, on right: 39
matchend (101)
    on left: 41, on right: 39
criteria (102)
    on left: 42 43, on right: 39 42
criterion (103)
    on left: 44 45 46 47 48 49 50, on right: 42 43
qstring_or_number (104)
    on left: 51 52, on right: 122
word_or_number (105)
    on left: 53 54, on right: 36
mode (106)
    on left: 55, on right: 6
modelines (107)
    on left: 56 57, on right: 55 57
modeline (108)
    on left: 58 59, on right: 57
bar (109)
    on left: 60, on right: 7
barlines (110)
    on left: 61 62, on right: 60 62 93
barline (111)
    on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79, on right:
    62
bar_status_command (112)
    on left: 80, on right: 64
bar_output (113)
    on left: 81, on right: 65
bar_tray_output (114)
    on left: 82, on right: 66
bar_position (115)
    on left: 83, on right: 67
bar_position_position (116)
    on left: 84 85, on right: 83
bar_mode (117)
    on left: 86, on right: 68
bar_mode_mode (118)
    on left: 87 88, on right: 86
bar_font (119)
    on left: 89, on right: 69
bar_workspace_buttons (120)
    on left: 90, on right: 70
bar_verbose (121)
    on left: 91, on right: 71
bar_socket_path (122)
    on left: 92, on right: 72
bar_colors (123)
    on left: 93, on right: 73
bar_color_background (124)
    on left: 94, on right: 74
bar_color_statusline (125)
    on left: 95, on right: 75
bar_color_focused_workspace (126)
    on left: 96, on right: 76
bar_color_active_workspace (127)
    on left: 97, on right: 77
bar_color_inactive_workspace (128)
    on left: 98, on right: 78
bar_color_urgent_workspace (129)
    on left: 99, on right: 79
floating_modifier (130)
    on left: 100, on right: 8
orientation (131)
    on left: 101, on right: 9
direction (132)
    on left: 102 103 104, on right: 101
workspace_layout (133)
    on left: 105 106, on right: 10
layout_mode (134)
    on left: 107 108 109, on right: 105
new_window (135)
    on left: 110, on right: 11
new_float (136)
    on left: 111, on right: 12
border_style (137)
    on left: 112 113 114, on right: 110 111
bool (138)
    on left: 115 116, on right: 90 91 117 118 119 120 121
focus_follows_mouse (139)
    on left: 117, on right: 13
force_focus_wrapping (140)
    on left: 118, on right: 14
force_xinerama (141)
    on left: 119, on right: 15
workspace_back_and_forth (142)
    on left: 120, on right: 16
workspace_bar (143)
    on left: 121, on right: 17
workspace (144)
    on left: 122 123, on right: 18
optional_workspace_name (145)
    on left: 124 125, on right: 122
workspace_name (146)
    on left: 126 127 128, on right: 123 125
assign (147)
    on left: 129 130, on right: 19
window_class (148)
    on left: 131 132, on right: 129
ipcsocket (149)
    on left: 133, on right: 20
restart_state (150)
    on left: 134, on right: 21
exec (151)
    on left: 135, on right: 22
exec_always (152)
    on left: 136, on right: 23
optional_no_startup_id (153)
    on left: 137 138, on right: 135 136
terminal (154)
    on left: 139, on right: 26
font (155)
    on left: 140, on right: 27
single_color (156)
    on left: 141, on right: 24
color (157)
    on left: 142, on right: 25
colorpixel (158)
    on left: 143, on right: 141 142
binding_modifiers (159)
    on left: 144 145 146 147, on right: 35 36 100 146 147
binding_modifier (160)
    on left: 148 149 150, on right: 145 146
popup_during_fullscreen (161)
    on left: 151, on right: 29
popup_setting (162)
    on left: 152 153, on right: 151


state 0

    0 $accept: . lines $end

    $default  reduce using rule 1 (lines)

    lines  go to state 1


state 1

    0 $accept: lines . $end
    2 lines: lines . error
    3      | lines . line

    $end                             shift, and go to state 2
    error                            shift, and go to state 3
    TOKBINDCODE                      shift, and go to state 4
    TOKTERMINAL                      shift, and go to state 5
    "<comment>"                      shift, and go to state 6
    "font"                           shift, and go to state 7
    "bindsym"                        shift, and go to state 8
    "floating_modifier"              shift, and go to state 9
    "workspace"                      shift, and go to state 10
    "assign"                         shift, and go to state 11
    "ipc_socket"                     shift, and go to state 12
    "restart_state"                  shift, and go to state 13
    "exec"                           shift, and go to state 14
    "exec_always"                    shift, and go to state 15
    TOKSINGLECOLOR                   shift, and go to state 16
    TOKCOLOR                         shift, and go to state 17
    "mode"                           shift, and go to state 18
    "bar"                            shift, and go to state 19
    "default_orientation"            shift, and go to state 20
    "workspace_layout"               shift, and go to state 21
    "new_window"                     shift, and go to state 22
    "new_float"                      shift, and go to state 23
    "focus_follows_mouse"            shift, and go to state 24
    "force_focus_wrapping"           shift, and go to state 25
    "force_xinerama"                 shift, and go to state 26
    "workspace_auto_back_and_forth"  shift, and go to state 27
    "workspace_bar"                  shift, and go to state 28
    "popup_during_fullscreen"        shift, and go to state 29
    "for_window"                     shift, and go to state 30

    line                      go to state 31
    comment                   go to state 32
    bindline                  go to state 33
    binding                   go to state 34
    for_window                go to state 35
    mode                      go to state 36
    bar                       go to state 37
    floating_modifier         go to state 38
    orientation               go to state 39
    workspace_layout          go to state 40
    new_window                go to state 41
    new_float                 go to state 42
    focus_follows_mouse       go to state 43
    force_focus_wrapping      go to state 44
    force_xinerama            go to state 45
    workspace_back_and_forth  go to state 46
    workspace_bar             go to state 47
    workspace                 go to state 48
    assign                    go to state 49
    ipcsocket                 go to state 50
    restart_state             go to state 51
    exec                      go to state 52
    exec_always               go to state 53
    terminal                  go to state 54
    font                      go to state 55
    single_color              go to state 56
    color                     go to state 57
    popup_during_fullscreen   go to state 58


state 2

    0 $accept: lines $end .

    $default  accept


state 3

    2 lines: lines error .

    $default  reduce using rule 2 (lines)


state 4

   33 binding: TOKBINDCODE . bindcode

    "<modifier>"  shift, and go to state 59
    "control"     shift, and go to state 60
    "shift"       shift, and go to state 61

    $default  reduce using rule 144 (binding_modifiers)

    bindcode           go to state 62
    binding_modifiers  go to state 63
    binding_modifier   go to state 64


state 5

  139 terminal: TOKTERMINAL . "<string>"

    "<string>"  shift, and go to state 65


state 6

   30 comment: "<comment>" .

    $default  reduce using rule 30 (comment)


state 7

  140 font: "font" . "<string>"

    "<string>"  shift, and go to state 66


state 8

   34 binding: "bindsym" . bindsym

    "<modifier>"  shift, and go to state 59
    "control"     shift, and go to state 60
    "shift"       shift, and go to state 61

    $default  reduce using rule 144 (binding_modifiers)

    bindsym            go to state 67
    binding_modifiers  go to state 68
    binding_modifier   go to state 64


state 9

  100 floating_modifier: "floating_modifier" . binding_modifiers

    "<modifier>"  shift, and go to state 59
    "control"     shift, and go to state 60
    "shift"       shift, and go to state 61

    $default  reduce using rule 144 (binding_modifiers)

    binding_modifiers  go to state 69
    binding_modifier   go to state 64


state 10

  122 workspace: "workspace" . qstring_or_number "output" "<RandR output>" optional_workspace_name
  123          | "workspace" . "<number>" workspace_name

    "<number>"         shift, and go to state 70
    "<quoted string>"  shift, and go to state 71

    qstring_or_number  go to state 72


state 11

  129 assign: "assign" . window_class "<string>"
  130       | "assign" . match "<string>"

    "<string (non-greedy)>"  shift, and go to state 73
    "<quoted string>"        shift, and go to state 74
    '['                      shift, and go to state 75

    $default  reduce using rule 38 (match)

    match         go to state 76
    matchstart    go to state 77
    window_class  go to state 78


state 12

  133 ipcsocket: "ipc_socket" . "<string>"

    "<string>"  shift, and go to state 79


state 13

  134 restart_state: "restart_state" . "<string>"

    "<string>"  shift, and go to state 80


state 14

  135 exec: "exec" . optional_no_startup_id "<string>"

    "--no-startup-id"  shift, and go to state 81

    $default  reduce using rule 137 (optional_no_startup_id)

    optional_no_startup_id  go to state 82


state 15

  136 exec_always: "exec_always" . optional_no_startup_id "<string>"

    "--no-startup-id"  shift, and go to state 81

    $default  reduce using rule 137 (optional_no_startup_id)

    optional_no_startup_id  go to state 83


state 16

  141 single_color: TOKSINGLECOLOR . colorpixel

    "#<hex>"  shift, and go to state 84

    colorpixel  go to state 85


state 17

  142 color: TOKCOLOR . colorpixel colorpixel colorpixel

    "#<hex>"  shift, and go to state 84

    colorpixel  go to state 86


state 18

   55 mode: "mode" . "<quoted string>" '{' modelines '}'

    "<quoted string>"  shift, and go to state 87


state 19

   60 bar: "bar" . '{' barlines '}'

    '{'  shift, and go to state 88


state 20

  101 orientation: "default_orientation" . direction

    "horizontal"  shift, and go to state 89
    "vertical"    shift, and go to state 90
    "auto"        shift, and go to state 91

    direction  go to state 92


state 21

  105 workspace_layout: "workspace_layout" . layout_mode
  106                 | "workspace_layout" . "stack-limit" "stack-limit" "<number>"

    "default"      shift, and go to state 93
    "stacking"     shift, and go to state 94
    "tabbed"       shift, and go to state 95
    "stack-limit"  shift, and go to state 96

    layout_mode  go to state 97


state 22

  110 new_window: "new_window" . border_style

    "normal"  shift, and go to state 98
    "none"    shift, and go to state 99
    "1pixel"  shift, and go to state 100

    border_style  go to state 101


state 23

  111 new_float: "new_float" . border_style

    "normal"  shift, and go to state 98
    "none"    shift, and go to state 99
    "1pixel"  shift, and go to state 100

    border_style  go to state 102


state 24

  117 focus_follows_mouse: "focus_follows_mouse" . bool

    "<number>"  shift, and go to state 103
    "<word>"    shift, and go to state 104

    bool  go to state 105


state 25

  118 force_focus_wrapping: "force_focus_wrapping" . bool

    "<number>"  shift, and go to state 103
    "<word>"    shift, and go to state 104

    bool  go to state 106


state 26

  119 force_xinerama: "force_xinerama" . bool

    "<number>"  shift, and go to state 103
    "<word>"    shift, and go to state 104

    bool  go to state 107


state 27

  120 workspace_back_and_forth: "workspace_auto_back_and_forth" . bool

    "<number>"  shift, and go to state 103
    "<word>"    shift, and go to state 104

    bool  go to state 108


state 28

  121 workspace_bar: "workspace_bar" . bool

    "<number>"  shift, and go to state 103
    "<word>"    shift, and go to state 104

    bool  go to state 109


state 29

  151 popup_during_fullscreen: "popup_during_fullscreen" . popup_setting

    "ignore"            shift, and go to state 110
    "leave_fullscreen"  shift, and go to state 111

    popup_setting  go to state 112


state 30

   37 for_window: "for_window" . match command

    '['  shift, and go to state 75

    $default  reduce using rule 38 (match)

    match       go to state 113
    matchstart  go to state 77


state 31

    3 lines: lines line .

    $default  reduce using rule 3 (lines)


state 32

   28 line: comment .

    $default  reduce using rule 28 (line)


state 33

    4 line: bindline .

    $default  reduce using rule 4 (line)


state 34

   32 bindline: binding .

    $default  reduce using rule 32 (bindline)


state 35

    5 line: for_window .

    $default  reduce using rule 5 (line)


state 36

    6 line: mode .

    $default  reduce using rule 6 (line)


state 37

    7 line: bar .

    $default  reduce using rule 7 (line)


state 38

    8 line: floating_modifier .

    $default  reduce using rule 8 (line)


state 39

    9 line: orientation .

    $default  reduce using rule 9 (line)


state 40

   10 line: workspace_layout .

    $default  reduce using rule 10 (line)


state 41

   11 line: new_window .

    $default  reduce using rule 11 (line)


state 42

   12 line: new_float .

    $default  reduce using rule 12 (line)


state 43

   13 line: focus_follows_mouse .

    $default  reduce using rule 13 (line)


state 44

   14 line: force_focus_wrapping .

    $default  reduce using rule 14 (line)


state 45

   15 line: force_xinerama .

    $default  reduce using rule 15 (line)


state 46

   16 line: workspace_back_and_forth .

    $default  reduce using rule 16 (line)


state 47

   17 line: workspace_bar .

    $default  reduce using rule 17 (line)


state 48

   18 line: workspace .

    $default  reduce using rule 18 (line)


state 49

   19 line: assign .

    $default  reduce using rule 19 (line)


state 50

   20 line: ipcsocket .

    $default  reduce using rule 20 (line)


state 51

   21 line: restart_state .

    $default  reduce using rule 21 (line)


state 52

   22 line: exec .

    $default  reduce using rule 22 (line)


state 53

   23 line: exec_always .

    $default  reduce using rule 23 (line)


state 54

   26 line: terminal .

    $default  reduce using rule 26 (line)


state 55

   27 line: font .

    $default  reduce using rule 27 (line)


state 56

   24 line: single_color .

    $default  reduce using rule 24 (line)


state 57

   25 line: color .

    $default  reduce using rule 25 (line)


state 58

   29 line: popup_during_fullscreen .

    $default  reduce using rule 29 (line)


state 59

  148 binding_modifier: "<modifier>" .

    $default  reduce using rule 148 (binding_modifier)


state 60

  149 binding_modifier: "control" .

    $default  reduce using rule 149 (binding_modifier)


state 61

  150 binding_modifier: "shift" .

    $default  reduce using rule 150 (binding_modifier)


state 62

   33 binding: TOKBINDCODE bindcode .

    $default  reduce using rule 33 (binding)


state 63

   35 bindcode: binding_modifiers . "<number>" command
  146 binding_modifiers: binding_modifiers . '+' binding_modifier
  147                  | binding_modifiers . '+'

    "<number>"  shift, and go to state 114
    '+'         shift, and go to state 115


state 64

  145 binding_modifiers: binding_modifier .

    $default  reduce using rule 145 (binding_modifiers)


state 65

  139 terminal: TOKTERMINAL "<string>" .

    $default  reduce using rule 139 (terminal)


state 66

  140 font: "font" "<string>" .

    $default  reduce using rule 140 (font)


state 67

   34 binding: "bindsym" bindsym .

    $default  reduce using rule 34 (binding)


state 68

   36 bindsym: binding_modifiers . word_or_number command
  146 binding_modifiers: binding_modifiers . '+' binding_modifier
  147                  | binding_modifiers . '+'

    "<number>"  shift, and go to state 116
    "<word>"    shift, and go to state 117
    '+'         shift, and go to state 115

    word_or_number  go to state 118


state 69

  100 floating_modifier: "floating_modifier" binding_modifiers .
  146 binding_modifiers: binding_modifiers . '+' binding_modifier
  147                  | binding_modifiers . '+'

    '+'  shift, and go to state 115

    $default  reduce using rule 100 (floating_modifier)


state 70

   52 qstring_or_number: "<number>" .
  123 workspace: "workspace" "<number>" . workspace_name

    "<word>"           shift, and go to state 119
    "<string>"         shift, and go to state 120
    "<quoted string>"  shift, and go to state 121

    $default  reduce using rule 52 (qstring_or_number)

    workspace_name  go to state 122


state 71

   51 qstring_or_number: "<quoted string>" .

    $default  reduce using rule 51 (qstring_or_number)


state 72

  122 workspace: "workspace" qstring_or_number . "output" "<RandR output>" optional_workspace_name

    "output"  shift, and go to state 123


state 73

  132 window_class: "<string (non-greedy)>" .

    $default  reduce using rule 132 (window_class)


state 74

  131 window_class: "<quoted string>" .

    $default  reduce using rule 131 (window_class)


state 75

   40 matchstart: '[' .

    $default  reduce using rule 40 (matchstart)


state 76

  130 assign: "assign" match . "<string>"

    "<string>"  shift, and go to state 124


state 77

   39 match: matchstart . criteria matchend

    "mark"         shift, and go to state 125
    "class"        shift, and go to state 126
    "instance"     shift, and go to state 127
    "window_role"  shift, and go to state 128
    "id"           shift, and go to state 129
    "con_id"       shift, and go to state 130
    "title"        shift, and go to state 131

    criteria   go to state 132
    criterion  go to state 133


state 78

  129 assign: "assign" window_class . "<string>"

    "<string>"  shift, and go to state 134


state 79

  133 ipcsocket: "ipc_socket" "<string>" .

    $default  reduce using rule 133 (ipcsocket)


state 80

  134 restart_state: "restart_state" "<string>" .

    $default  reduce using rule 134 (restart_state)


state 81

  138 optional_no_startup_id: "--no-startup-id" .

    $default  reduce using rule 138 (optional_no_startup_id)


state 82

  135 exec: "exec" optional_no_startup_id . "<string>"

    "<string>"  shift, and go to state 135


state 83

  136 exec_always: "exec_always" optional_no_startup_id . "<string>"

    "<string>"  shift, and go to state 136


state 84

  143 colorpixel: "#<hex>" .

    $default  reduce using rule 143 (colorpixel)


state 85

  141 single_color: TOKSINGLECOLOR colorpixel .

    $default  reduce using rule 141 (single_color)


state 86

  142 color: TOKCOLOR colorpixel . colorpixel colorpixel

    "#<hex>"  shift, and go to state 84

    colorpixel  go to state 137


state 87

   55 mode: "mode" "<quoted string>" . '{' modelines '}'

    '{'  shift, and go to state 138


state 88

   60 bar: "bar" '{' . barlines '}'

    $default  reduce using rule 61 (barlines)

    barlines  go to state 139


state 89

  102 direction: "horizontal" .

    $default  reduce using rule 102 (direction)


state 90

  103 direction: "vertical" .

    $default  reduce using rule 103 (direction)


state 91

  104 direction: "auto" .

    $default  reduce using rule 104 (direction)


state 92

  101 orientation: "default_orientation" direction .

    $default  reduce using rule 101 (orientation)


state 93

  107 layout_mode: "default" .

    $default  reduce using rule 107 (layout_mode)


state 94

  108 layout_mode: "stacking" .

    $default  reduce using rule 108 (layout_mode)


state 95

  109 layout_mode: "tabbed" .

    $default  reduce using rule 109 (layout_mode)


state 96

  106 workspace_layout: "workspace_layout" "stack-limit" . "stack-limit" "<number>"

    "stack-limit"  shift, and go to state 140


state 97

  105 workspace_layout: "workspace_layout" layout_mode .

    $default  reduce using rule 105 (workspace_layout)


state 98

  112 border_style: "normal" .

    $default  reduce using rule 112 (border_style)


state 99

  113 border_style: "none" .

    $default  reduce using rule 113 (border_style)


state 100

  114 border_style: "1pixel" .

    $default  reduce using rule 114 (border_style)


state 101

  110 new_window: "new_window" border_style .

    $default  reduce using rule 110 (new_window)


state 102

  111 new_float: "new_float" border_style .

    $default  reduce using rule 111 (new_float)


state 103

  115 bool: "<number>" .

    $default  reduce using rule 115 (bool)


state 104

  116 bool: "<word>" .

    $default  reduce using rule 116 (bool)


state 105

  117 focus_follows_mouse: "focus_follows_mouse" bool .

    $default  reduce using rule 117 (focus_follows_mouse)


state 106

  118 force_focus_wrapping: "force_focus_wrapping" bool .

    $default  reduce using rule 118 (force_focus_wrapping)


state 107

  119 force_xinerama: "force_xinerama" bool .

    $default  reduce using rule 119 (force_xinerama)


state 108

  120 workspace_back_and_forth: "workspace_auto_back_and_forth" bool .

    $default  reduce using rule 120 (workspace_back_and_forth)


state 109

  121 workspace_bar: "workspace_bar" bool .

    $default  reduce using rule 121 (workspace_bar)


state 110

  152 popup_setting: "ignore" .

    $default  reduce using rule 152 (popup_setting)


state 111

  153 popup_setting: "leave_fullscreen" .

    $default  reduce using rule 153 (popup_setting)


state 112

  151 popup_during_fullscreen: "popup_during_fullscreen" popup_setting .

    $default  reduce using rule 151 (popup_during_fullscreen)


state 113

   37 for_window: "for_window" match . command

    "<string>"  shift, and go to state 141

    command  go to state 142


state 114

   35 bindcode: binding_modifiers "<number>" . command

    "<string>"  shift, and go to state 141

    command  go to state 143


state 115

  146 binding_modifiers: binding_modifiers '+' . binding_modifier
  147                  | binding_modifiers '+' .

    "<modifier>"  shift, and go to state 59
    "control"     shift, and go to state 60
    "shift"       shift, and go to state 61

    $default  reduce using rule 147 (binding_modifiers)

    binding_modifier  go to state 144


state 116

   54 word_or_number: "<number>" .

    $default  reduce using rule 54 (word_or_number)


state 117

   53 word_or_number: "<word>" .

    $default  reduce using rule 53 (word_or_number)


state 118

   36 bindsym: binding_modifiers word_or_number . command

    "<string>"  shift, and go to state 141

    command  go to state 145


state 119

  128 workspace_name: "<word>" .

    $default  reduce using rule 128 (workspace_name)


state 120

  127 workspace_name: "<string>" .

    $default  reduce using rule 127 (workspace_name)


state 121

  126 workspace_name: "<quoted string>" .

    $default  reduce using rule 126 (workspace_name)


state 122

  123 workspace: "workspace" "<number>" workspace_name .

    $default  reduce using rule 123 (workspace)


state 123

  122 workspace: "workspace" qstring_or_number "output" . "<RandR output>" optional_workspace_name

    "<RandR output>"  shift, and go to state 146


state 124

  130 assign: "assign" match "<string>" .

    $default  reduce using rule 130 (assign)


state 125

   49 criterion: "mark" . '=' "<string>"

    '='  shift, and go to state 147


state 126

   44 criterion: "class" . '=' "<string>"

    '='  shift, and go to state 148


state 127

   45 criterion: "instance" . '=' "<string>"

    '='  shift, and go to state 149


state 128

   46 criterion: "window_role" . '=' "<string>"

    '='  shift, and go to state 150


state 129

   48 criterion: "id" . '=' "<string>"

    '='  shift, and go to state 151


state 130

   47 criterion: "con_id" . '=' "<string>"

    '='  shift, and go to state 152


state 131

   50 criterion: "title" . '=' "<string>"

    '='  shift, and go to state 153


state 132

   39 match: matchstart criteria . matchend
   42 criteria: criteria . criterion

    "mark"         shift, and go to state 125
    "class"        shift, and go to state 126
    "instance"     shift, and go to state 127
    "window_role"  shift, and go to state 128
    "id"           shift, and go to state 129
    "con_id"       shift, and go to state 130
    "title"        shift, and go to state 131
    ']'            shift, and go to state 154

    matchend   go to state 155
    criterion  go to state 156


state 133

   43 criteria: criterion .

    $default  reduce using rule 43 (criteria)


state 134

  129 assign: "assign" window_class "<string>" .

    $default  reduce using rule 129 (assign)


state 135

  135 exec: "exec" optional_no_startup_id "<string>" .

    $default  reduce using rule 135 (exec)


state 136

  136 exec_always: "exec_always" optional_no_startup_id "<string>" .

    $default  reduce using rule 136 (exec_always)


state 137

  142 color: TOKCOLOR colorpixel colorpixel . colorpixel

    "#<hex>"  shift, and go to state 84

    colorpixel  go to state 157


state 138

   55 mode: "mode" "<quoted string>" '{' . modelines '}'

    $default  reduce using rule 56 (modelines)

    modelines  go to state 158


state 139

   60 bar: "bar" '{' barlines . '}'
   62 barlines: barlines . barline

    "<comment>"           shift, and go to state 6
    "output (bar)"        shift, and go to state 159
    "tray_output"         shift, and go to state 160
    "socket_path"         shift, and go to state 161
    "mode (bar)"          shift, and go to state 162
    "position"            shift, and go to state 163
    "status_command"      shift, and go to state 164
    "font (bar)"          shift, and go to state 165
    "workspace_buttons"   shift, and go to state 166
    "verbose"             shift, and go to state 167
    "colors"              shift, and go to state 168
    "background"          shift, and go to state 169
    "statusline"          shift, and go to state 170
    "focused_workspace"   shift, and go to state 171
    "active_workspace"    shift, and go to state 172
    "inactive_workspace"  shift, and go to state 173
    "urgent_workspace"    shift, and go to state 174
    '}'                   shift, and go to state 175

    comment                       go to state 176
    barline                       go to state 177
    bar_status_command            go to state 178
    bar_output                    go to state 179
    bar_tray_output               go to state 180
    bar_position                  go to state 181
    bar_mode                      go to state 182
    bar_font                      go to state 183
    bar_workspace_buttons         go to state 184
    bar_verbose                   go to state 185
    bar_socket_path               go to state 186
    bar_colors                    go to state 187
    bar_color_background          go to state 188
    bar_color_statusline          go to state 189
    bar_color_focused_workspace   go to state 190
    bar_color_active_workspace    go to state 191
    bar_color_inactive_workspace  go to state 192
    bar_color_urgent_workspace    go to state 193


state 140

  106 workspace_layout: "workspace_layout" "stack-limit" "stack-limit" . "<number>"

    "<number>"  shift, and go to state 194


state 141

   31 command: "<string>" .
